--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ li {
 }
 a {
   text-decoration: none;
+  color: black;
 }
 ul {
   padding: 0;
@@ -26,7 +27,7 @@ ul {
   right: 0;
   position: fixed;
   margin: 0 20px;
-  box-shadow: 0 0 30px rgba(0, 0, 0, 0.08);
+  box-shadow:0 0 30px rgba(0,0,0,.08);
   display: flex;
   justify-content: space-between;
   border-radius: 50px;
@@ -40,17 +41,20 @@ ul {
   display: flex;
   justify-content: center;
 }
-.navbar-right > li {
+.navbar-right > li > a {
   padding: 0 20px;
+  transition: 0.2s ease-in-out;
+}
+.navbar-right > li :hover {
+  opacity: 0.6;
+  /* border: 1px solid var(--theme-color-1); */
+  color: var(--theme-color-1);
 }
 .header {
-  top: 0;
-  left: 0;
-  right: 0;
-  position: absolute;
+  width: 100%;
   height: 100vh;
-  width: 100vw;
   padding: 0;
+  margin: 0;
   background-color: rgba(0, 0, 0, 0.849);
   display: flex;
   flex-direction: row;
@@ -65,17 +69,19 @@ ul {
   left: 0;
   right: 0;
   top: 0;
+  bottom: 0;
   width: 100%;
   height: 100%;
+  filter: grayscale();
   background-image: url(/images/header-bg.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   mix-blend-mode: multiply;
-  z-index: 0px;
+  z-index: 0;
 }
 .header-info {
-  z-index: 50px !important;
+  z-index: 50 ;
   padding: 50px calc(var(--padding-size) + 20px);
   height: 100%;
   display: flex;
@@ -86,14 +92,31 @@ ul {
 .hello-content {
   background-color: var(--theme-color-1);
   border-radius: 20px 20px 20px 0;
-  width: 100px;
-  padding: 10px 30px;
   font-size: 14px;
+  font-size: 1.1vw;
+  line-height: 24px;
+  letter-spacing: 1px;
   font-weight: bold;
+  padding: 10px 30px;
+  display: inline-block;
+  min-width: 60px;
+  max-width: 80px;
 }
 .name-content {
   font-size: 60px;
+  font-size: 4vw;
   margin: 10px 0;
+}
+.animated-content {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 10px;
+  font-size: 25px;
+  font-size: 2vw;
+}
+.animated-type {
+  color: var(--theme-color-1);
+  font-weight: bold;
 }
 .address-content > li {
   display: flex;
@@ -104,23 +127,72 @@ ul {
 }
 .address-content > li > a {
   font-size: 14px;
+  font-size: 1vw;
   color: white;
 }
 .address-content > li > i {
   padding-right: 10px;
 }
 .avatar {
+  z-index: 50 ;
   width: 40%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  filter: grayscale();
 }
 .avatar > img {
   border-radius: 50%;
   object-fit: cover;
   width: 250px;
   height: 250px;
-  border: 20px solid rgba(0, 0, 0, 0.52);
+  border: 20px solid rgba(0, 0, 0, 0.274);
+}
+/* .contact-button {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 25px 0;
+  color: var(--theme-color-1);
+  font-weight: bold;
+  font-size: 16px;
+  font-size: 1.1vw;
+  border-radius: 2px;
+  letter-spacing: 4px;
+  padding: 0 30px;
+  text-transform: uppercase;
+  background: black;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  min-width: 100px;
+  max-width: 250px;
+  transition: border-width 0.6s linear;
+}
+.contact-button:hover {
+  border: 1px solid var(--theme-color-1);
+  color: var(--theme-color-1);
+  box-shadow: 0 0 5px var(--theme-color-1),0 0 10px var(--theme-color-1),0 0 20px var(--theme-color-1);
+} */
+
+.about-me-container {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  padding: 50px calc(var(--padding-size) + 20px);
+  justify-content: space-between;
+  background: white;
+  color: black;
+}
+.about-me-img {
+  position: absolute;
+  width: 40%;
+  top: 0;
+  right: 0;
+}
+.about-me-content{
+  width: 55%;
+  padding: 10px 35px 10px 0;
 }
